--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -9,11 +9,16 @@ env:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v2
+
+    - name: Get release
+      id: get_release
+      uses: bruceadams/get-release@v1.2.2
+      env:
+        GITHUB_TOKEN: ${{ github.token }}
+
     - name: Build
       run: cargo build --verbose
     - name: Run tests
@@ -21,7 +26,17 @@ jobs:
     - name: Run install
       run: cargo install --verbose --path .
 
-    - name: Run as shell
+    - name: Run bf-script
       run: |
         >>>++
       shell: rustplayground {0}
+
+    - name: Upload release binary
+      uses: actions/upload-release-asset@v1.0.2
+      env:
+        GITHUB_TOKEN: ${{ github.token }}
+      with:
+        upload_url: ${{ steps.get_release.outputs.upload_url }}
+        asset_path: ./target/debug/rustplayground
+        asset_name: rustplayground
+        asset_content_type: application/octet-stream
