--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -13,12 +13,6 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
-    - name: Get release
-      id: get_release
-      uses: bruceadams/get-release@v1.2.2
-      env:
-        GITHUB_TOKEN: ${{ github.token }}
-
     - name: Build
       run: cargo build --verbose
     - name: Run tests
@@ -36,7 +30,7 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ github.token }}
       with:
-        upload_url: ${{ steps.get_release.outputs.upload_url }}
+        upload_url: https://uploads.github.com/repos/fwilhe2/rustplayground/releases/1/assets{?name,label}
         asset_path: ./target/debug/rustplayground
         asset_name: rustplayground
         asset_content_type: application/octet-stream
