--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -30,7 +30,7 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ github.token }}
       with:
-        upload_url: https://uploads.github.com/repos/fwilhe2/rustplayground/releases/1/assets/rustplayground
+        upload_url: "https://uploads.github.com/repos/fwilhe2/rustplayground/releases/37263537/assets{?name,label}"
         asset_path: ./target/debug/rustplayground
         asset_name: rustplayground
         asset_content_type: application/octet-stream
